# Projeto-Simao

./: .gitignore  CMakeLists.txt  Makefile.txt  Projeto-Simao.cpp  Projeto-Simao.h
Jogo-SFML/: Constants.h  Ente.cpp  Ente.h  Entidade.cpp  Entidade.h  GerenciadorColisoes.cpp  GerenciadorColisoes.h  GerenciadorEventos.cpp  GerenciadorEventos.h  GerenciadorGrafico.cpp  GerenciadorGrafico.h  ID.h  Inimigo.cpp  Inimigo.h  Jogador.cpp  Jogador.h  Jogo-SFML.sln  Jogo-SFML.vcxproj  Jogo-SFML.vcxproj.filters  Jogo.cpp  Jogo.h  Obstaculo.cpp  Obstaculo.h  Personagem.cpp  Personagem.h  Plataforma.cpp  Plataforma.h  Projetil.cpp  Projetil.h  Vector.cpp  Vector.h  list.h  listEntidade.cpp  listEntidade.h  main.cpp
Jogo-SFML/x64/Debug/: Jogo-SFML.exe.recipe  Jogo-SFML.ilk  Jogo-SFML.vcxproj.FileListAbsolute.txt  vc143.idb
Jogo-SFML/x64/Debug/Jogo-SFML.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Jogo-SFML.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Relatório/: Relatório-Projeto.docx
UML/: Untitled.mdj
